--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "bootstrap": "^4.5.0",
     "electron": "^9.0.5",
+    "electron-store": "^5.2.0",
     "express": "^4.17.1",
     "jquery": "^3.5.1",
     "path": "^0.12.7",
