--- a/package.json
+++ b/package.json
@@ -5,19 +5,35 @@
   "main": "index.js",
   "scripts": {
     "start": "electron .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "next build renderer && next export renderer",
+    "dist": "npm run build",
+    "dobuild": "electron-builder"
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@zeit/next-css": "^1.0.1",
     "bootstrap": "^4.5.0",
     "electron": "^9.0.5",
+    "electron-is-dev": "^1.2.0",
     "electron-store": "^5.2.0",
-    "express": "^4.17.1",
-    "jquery": "^3.5.1",
+    "next": "^9.4.4",
     "path": "^0.12.7",
-    "popper.js": "^1.16.1",
+    "react": "^16.13.1",
+    "react-bootstrap": "^1.0.1",
+    "react-dom": "^16.13.1",
     "url": "^0.11.0"
+  },
+  "devDependencies": {
+    "electron-builder": "^22.7.0",
+    "electron-next": "^3.1.5"
+  },
+  "build": {
+    "files": [
+      "**/*",
+      "!renderer",
+      "renderer/out"
+    ]
   }
 }
