--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
     "bootstrap": "^4.5.0",
-    "electron": "^9.0.5",
     "electron-is-dev": "^1.2.0",
+    "electron-next": "^3.1.5",
     "electron-store": "^5.2.0",
+    "linq": "^3.2.2",
     "next": "^9.4.4",
     "path": "^0.12.7",
     "react": "^16.13.1",
@@ -26,8 +27,8 @@
     "url": "^0.11.0"
   },
   "devDependencies": {
-    "electron-builder": "^22.7.0",
-    "electron-next": "^3.1.5"
+    "electron": "^9.0.5",
+    "electron-builder": "^22.7.0"
   },
   "build": {
     "files": [
